[package]
name = "space_evasion_rust"
version = "0.1.0"
authors = ["Nemo Eriksson"]
description = "A simple game where I try and learn 2D graphics and logic in rust by remaking a game I made in PyGame"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"